...
                snackbarHostState.currentSnackbarData?.dismiss()
            }

            // Display the snackbar indefinitely (controlled manually by the timer)
            val result = snackbarHostState.showSnackbar(
                message = event.message,
                actionLabel = "Confirm",
                duration = SnackbarDuration.Indefinite
            )

            // Cancel timer if user interacted
            timerJob.cancel()
            scope.launch { progressAnimatable.stop() }
...
            ) {
                IconButton(
                    onClick = { authViewModel.logout(onLogoutComplete = onLogout) }
                ) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.ExitToApp,
                        contentDescription = "Logout",
                        tint = Color(0xFF4353AB)
                    )
                }
            }

            // Custom Snackbar Host (Top Center)
...
